--- a/Архитектура.md
+++ b/Архитектура.md
@@ -24,7 +24,7 @@
 - `tug` 
 - `tanker` 
 
-Итого 4 (Пречисления стандартно занимают 4)
+Итого: 4 (Пречисления стандартно занимают 4)
 
 Структура `ship`
 - `speed` - 4, отступ 0
@@ -32,21 +32,21 @@
 - `displace` - 4, отступ 8
 - `ship_kind` - 4, отступ 12
 
-Итого 16
+Итого: 16
 
 Стуктура `train`
 - `speed` - 4, отступ 0
 - `distance` - 4, отступ 4
 - `cars_counter` - 4, отступ 8
 
-Итого 12
+Итого: 12
 
 Перечисление `key`
 - `plain` 
 - `train`
 - `ship`
 
-Итого 4 (Пречисления стандартно занимают 4)
+Итого: 4 (Пречисления стандартно занимают 4)
 
 Струтура `transport`
 * `k` - 4, отступ 0
@@ -59,12 +59,27 @@
 
     * s - 16, отступ 4
 
-Итого 20
+Итого: 20
 
 Структура `container`
 - `len` - 4, отступ 0
 - `cont` - 80000, на куче 200000 (максимально), отступ 4
 
+Итого: 80004, на куче не более 200000
+
 ## Модули программы
 
-## Время прохождения тетов
+Для каждой структуры из предыущего пункта по 1 `.h` и `.cpp` файлу.
+Дополнительно `rnd.h` для генирации случайных чисел и файл с точкой вода в программу `main.cpp`
+
+Итого: 6 интерфейсных модулей и 6 модулей реализации
+
+## Время прохождения тестов
+
+- `trains.txt` - 0,002s
+- `plains.txt` - 0,014s 
+- `ships.txt` - 0,012s
+- `mixed.txt` - 0,011s
+- `mixed2.txt` - 0,007s
+- сгенерированный тест на 1000 элементов - 0,028s
+- сгенерированный тест на 10000 элементов - 1,190s (слишком большой для гита)
