--- a/Архитектура.md
+++ b/Архитектура.md
@@ -1,5 +1,12 @@
 # Архитектура вычислительной системы
 
+## Моя операционная система и процессор
+
+- Процессор - Intel(R) Core(TM) i5-7200U CPU @ 2.50GHz
+
+- ОС - Linux 5.9.16-1-MANJARO
+
+
 ## Требуемая память структур
 
 Память будет указана в байтах
